examples/test/testpolicy8877.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8877
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key26: value11
      key1: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value45
          key16: value27
      podSelector:
        matchLabels:
          key17: value33
